--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ a:hover{color: #FF0000;}
 </head>
 
 <body>
-	<h1 class="mytitle">169001101 刘备</h1>
+	<h1 class="mytitle">219970112雷骏扬</h1>
 	<ul id="dowebok">
 		<li>
 			<div><a href="作业1.html"><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></a></div>
@@ -30,19 +30,19 @@ a:hover{color: #FF0000;}
 		</li>
 		<li>
 			<div><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></div>
-			<div class="dt">作品1：普通网页布局展示</div>
+			<div class="dt">作品3：普通网页布局展示</div>
 		</li>
 		<li>
 			<div><img data-original="img/tibet-2.jpg" src="img/tibet-2.jpg" alt="图片2"></div>
-			<div class="dt">作品2：普通网页布局展示</div>
+			<div class="dt">作品4：普通网页布局展示</div>
 		</li>
 		<li>
 			<div><img data-original="img/tibet-1.jpg" src="img/tibet-1.jpg" alt="图片1"></div>
-			<div class="dt">作品1：普通网页布局展示</div>
+			<div class="dt">作品5：普通网页布局展示</div>
 		</li>
 		<li>
 			<div><img data-original="img/tibet-2.jpg" src="img/tibet-2.jpg" alt="图片2"></div>
-			<div class="dt">作品2：普通网页布局展示</div>
+			<div class="dt">作品6：普通网页布局展示</div>
 		</li>
 	</ul>
 
